=================
Changes for Crate
=================

Unreleased
==========

 - Fixed a bug which prevented a retry, or caused a retry to fail if a shard
   was closed because of relocation

 - Added column policy as column to ``information_schema.tables`` table

 - Fixed a race condition that could cause `DROP TABLE IF EXISTS` statements to
   get stuck

 - Fix: column policy property was missing in SHOW CREATE TABLE result

 - Fixed a race condition that could cause queries with a high limit to fail
   due to a missing job context.

 - Updated crate-admin to 0.14.2 which includes the following changes:

    - added support for line breaks in console result table

 - Added SHOW CREATE TABLE statement to dump the schema of a user created table

 - Updated crash to 0.13.1 which contains following changes:

    - added multiline support for tabular output format

 - Fixed an issue which could cause an error if a ``group by`` query was killed

 - Fixed an issue that caused COPY TO `s3` statements to get stuck

 - Fixed an issue which results in _id queries not matching on
   partitioned and clustered tables without primary key columns.

 - Updated crate-admin to 0.14.1 which includes following changes:

    - fix: number of underreplicated shards were fetched and displayed incorrectly

 - Expose missing refresh_interval table setting in information_schema.tables.

 - Added support for multiple tables in refresh statement.

 - Added a limitation notice that `COPY TO` doesn't work with system tables and
   attempting to do so will result in a more meaningful error.

 - Fixed bulk delete for partitioned tables where partition column was part
   of the where clause

 - Added ``date_format`` scalar function

 - Updated crate-admin to 0.14.0 which includes following changes:

    - load plugins.json that can inject additional modules on app start
      the "Get Started" tutorial is now implemented as a plugin
