@@ -23,16 +23,26 @@ package io.crate.integrationtests;
 
 import com.carrotsearch.hppc.cursors.ObjectCursor;
 import com.google.common.base.Throwables;
+import com.google.common.util.concurrent.Futures;
+import com.google.common.util.concurrent.ListenableFuture;
 import io.crate.action.sql.*;
 import io.crate.action.sql.parser.SQLXContentSourceContext;
 import io.crate.action.sql.parser.SQLXContentSourceParser;
+import io.crate.analyze.Analyzer;
+import io.crate.analyze.ParameterContext;
+import io.crate.executor.Job;
+import io.crate.executor.TaskResult;
+import io.crate.executor.transport.TransportExecutor;
 import io.crate.jobs.JobContextService;
 import io.crate.jobs.JobExecutionContext;
 import io.crate.metadata.ColumnIdent;
 import io.crate.metadata.Schemas;
 import io.crate.metadata.TableIdent;
 import io.crate.metadata.table.TableInfo;
+import io.crate.planner.Plan;
+import io.crate.planner.Planner;
 import io.crate.plugin.CrateCorePlugin;
+import io.crate.sql.parser.SqlParser;
 import io.crate.testing.SQLTransportExecutor;
 import org.elasticsearch.action.admin.cluster.state.ClusterStateRequest;
 import org.elasticsearch.action.admin.cluster.state.ClusterStateResponse;
@@ -57,6 +67,7 @@ import org.junit.After;
 import java.io.IOException;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
@@ -169,6 +180,21 @@ public abstract class SQLTransportIntegrationTest extends ElasticsearchIntegrati
     public SQLResponse execute(String stmt, Object[] args) {
         response = sqlExecutor.exec(stmt, args);
         return response;
+    }
+
+    public Plan plan(String stmt) {
+        Analyzer analyzer = internalCluster().getInstance(Analyzer.class);
+        Planner planner = internalCluster().getInstance(Planner.class);
+
+        ParameterContext parameterContext = new ParameterContext(new Object[0], new Object[0][], null);
+        return planner.plan(analyzer.analyze(SqlParser.createStatement(stmt), parameterContext), UUID.randomUUID());
+    }
+
+    public ListenableFuture<List<TaskResult>> execute(Plan plan) {
+        TransportExecutor transportExecutor = internalCluster().getInstance(TransportExecutor.class);
+        Job job = transportExecutor.newJob(plan);
+        List<? extends ListenableFuture<TaskResult>> futures = transportExecutor.execute(job);
+        return Futures.allAsList(futures);
     }
 
     /**
